--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>curs-1</module>
         <module>curs-2</module>
+        <module>curs-3</module>
     </modules>
     <packaging>pom</packaging>
 
