--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>curs-1</module>
         <module>curs-2</module>
         <module>curs-3</module>
+        <module>curs-4</module>
     </modules>
     <packaging>pom</packaging>
 
